(fix): register form doesn't fit in mobile

--- a/src/app/modules/homepage-v2/homepage-v2.component.scss
+++ b/src/app/modules/homepage-v2/homepage-v2.component.scss
@@ -255,6 +255,8 @@ m-homepage__v2 {
 
           minds-form-register {
             padding: 48px 25px;
+            width: 278px;
+            margin: 0 auto;
           }
         }
 
